--- a/stocks/src/main/resources/application.properties
+++ b/stocks/src/main/resources/application.properties
@@ -1,8 +1,3 @@
-server.port=8080
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:default
-spring.datasource.username=admin
-spring.datasource.password=admin
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2
-spring.jpa.show-sql=true
+spring.mvc.view.prefix: /WEB-INF/jsp/
+spring.mvc.view.suffix: .jsp
+application.message: Hello World
