--- a/stocks/src/main/resources/application.properties
+++ b/stocks/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.mvc.view.prefix: /WEB-INF/jsp/
 spring.mvc.view.suffix: .jsp
-application.message: Hello World
+spring.datasource.url=jdbc:h2:file:./data/app_db;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.username=admin
+spring.datasource.password=password
+spring.datasource.driver-class-name=org.h2.Driver
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.format_sql=true
+logging.level.org.springframework.web=DEBUG
+logging.level.org.hibernate=DEBUG
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
